# libot2

./: .env.prod.example  .gitignore  .gitmodules  README.md  down.py  libotctl  pyproject.toml
src/: libotctl.py
src/common/: __init__.py  env.py  log_parser.py  manager.py  nb.py  render.py  subscription.py  superchat.py  util.py  utils.py
src/db/: activity.py  backup.py  event.py  liver.py  liver_stats.py  manager.py  song_list.py  sqlite.py  state.py  stats.py  subscription.py
src/monitor/: monitor.py
src/plugins/: commands.py  config.py  libot.py  scheduler.py  utils.py
src/render/: activity.py  song.py  stats.py  superchat.py
src/spider/: __init__.py  api.py  cron.py  models.py  wrapper.py
src/spider/jobs/: __init__.py  activity.py  backup.py  cookie_monitor.py  liver.py  liver_stats.py  lyrics.py  song_list.py  stats.py
src/web/: app.py
src/web/templates/: index.html  login.html  qrcode.html
